Fix line wrap

--- a/packages/x-scheduler/src/material/event-calendar/EventCalendar.css
+++ b/packages/x-scheduler/src/material/event-calendar/EventCalendar.css
@@ -5,7 +5,7 @@
 .EventCalendarRoot {
   width: 100%;
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 280px 1fr;
   grid-template-rows: auto 1fr;
   gap: var(--space-4);
   height: 100%;
