--- a/packages/x-scheduler/src/material/internals/components/date-navigator/DateNavigator.css
+++ b/packages/x-scheduler/src/material/internals/components/date-navigator/DateNavigator.css
@@ -10,7 +10,7 @@
 
 .DateNavigatorLabel {
   margin: 0;
-  font-size: var(--font-size-5);
+  font-size: var(--font-size-4);
   font-weight: var(--font-weight-3);
   line-height: 1.4;
 }
